[package]
name = "rifle"
description = "Starknet Blocktime estimator in Rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
tokio = { version = "1.26.0", features = ["full"] }
anyhow = "1.0.72"
starknet = "0.5.0"
chrono = "0.4.26"
url = "2.4.0"
